# cpp_example

./: README.md
0_cpp_premier/10_variable/: a.out  special.cpp  unsigned.cpp
1_static/: a  a.c  run.sh
2_static_lib/: a  add.h  run.sh
3_shared_lib/: a  a.cpp  add.cpp  run.sh
4_cmake/: CMakeLists.txt  main.cpp  run.sh
5_cmake_static/: CMakeLists.txt  hello.h  run.sh
6_cmake_shared/: .CMakeLists.txt.swp  CMakeLists.txt  hello.cpp  morning.cpp  morning.h  run.sh
7_cmake_auto/: CMakeLists.txt  run.sh
8_cmake_dir/: CMakeLists.txt
8_cmake_dir/src/: .CMakeLists.txt.swp  CMakeLists.txt
8_cmake_dir/test/: main.cpp
9_python/: add.c  run.sh  sub.cpp  test.py
